--- a/inicio sesion.html
+++ b/inicio sesion.html
@@ -41,21 +41,29 @@
                 <fieldset>
                     <div class="cont1">
 
-                        <br>
-                        <br>
-                        <br>
-                        <label class="m-1" for="mail">Correo:</label>
-                        <input class="ml-3" type="email" id="mail" name="mail" placeholder=" email@ejemplo.com" size="40" required="required" autofocus pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}">
-                        <br>
-                        <br>
-                        <label class="m-1" for="nombre">contraseña:</label>
-                        <input class="ml-1" type="text" id="contraseña" name="contraseña" placeholder="contraseña" size="30" required="required">
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                    </div>
+                        <div class="form-group">
+                            <label for="email">Correo Electrónico: </label>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="Ej.: abcdefg@gmail.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="contraseña">Contraseña: </label>
+                            <input type="contraseña" class="form-control" id="contraseña" name="contraseña" placeholder="*******">
+
+                            <br>
+                            <br>
+                            <br>
+                            <label class="m-1" for="mail">Correo:</label>
+                            <input class="ml-3" type="email" id="mail" name="mail" placeholder=" email@ejemplo.com" size="40" required="required" autofocus pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}">
+                            <br>
+                            <br>
+                            <label class="m-1" for="nombre">contraseña:</label>
+                            <input class="ml-1" type="text" id="contraseña" name="contraseña" placeholder="contraseña" size="30" required="required">
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                        </div>
                 </fieldset>
 
                 <br>
