--- a/inicio sesion.html
+++ b/inicio sesion.html
@@ -32,48 +32,62 @@
 
 
     <!--MainPagina-->
-
-    <section class="row">
-        <article class="border mt-5 col-12 col-md-12 col-lg-6 col-xl-6">
-            <!--Formulario Contacto-->
-            <h1 class="text-center">iniciar sesion </h1>
-            <form action="" method="post" class=" col-12 col-md-12 col-lg-12 col-xl-12">
-                <fieldset>
-                    <div class="cont1">
-
-                        <div class="form-group">
-                            <label for="email">Correo Electrónico: </label>
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Ej.: abcdefg@gmail.com">
+    <div class="container">
+        <div class="row">
+            <form method="post" action="procesar.php" id="formulario">
+                <div class="form-group">
+                    <label for="nombre">Nombre: </label>
+                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingresa tu nombre...">
+                </div>
+                <div class="form-group">
+                    <label for="email">Correo Electrónico: </label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Ej.: abcdefg@gmail.com">
+                </div>
+                <div class="form-group">
+                    <label for="contraseña">Contraseña: </label>
+                    <input type="contraseña" class="form-control" id="contraseña" name="contraseña" placeholder="*******">
+                </div>
+                <div class="form-group">
+                    <label for="telefono">Telefono: </label>
+                    <input type="telefono" class="form-control" id="telefono" name="telefono" placeholder="ej.: 987654321 o +56987654321">
+                </div>
+                <div class="form-group">
+                    <label for="comentario">Dejanos un comentario sobre tus intereses: </label>
+                    <input type="comentario" class="form-control" id="comentario" name="comentario" placeholder="Agrega una pequeña descripción...">
+                </div>
+                <div class="form-group">
+                    <label for="interes">Selecciona lo que más te interesa: </label>
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <div class="checkbox">
+                            <label><input type="checkbox" value="orf">Orfebreria</label>
                         </div>
-                        <div class="form-group">
-                            <label for="contraseña">Contraseña: </label>
-                            <input type="contraseña" class="form-control" id="contraseña" name="contraseña" placeholder="*******
+                        <div class="checkbox">
+                            <label><input type="checkbox" value="fotos">Photografia</label>
                         </div>
-                </fieldset>
-
-                <br>
-                <div id=" botones " class="mb-2 ">
-                    <input class="btn btn-outline-success " type="submit " value="entrar ">
-                    <input class="boton2 btn btn-outline-danger " type="reset " value="Borrar ">
+                        <div class="checkbox">
+                            <label><input type="checkbox" value="pinturas">pintura</label>
+                        </div>
+                    </div>
                 </div>
 
+                <input type="submit" class="btn btn-danger" id="enviar" value="Enviar">
+                <input type="reset" class="btn btn-primary" id="limpiar" value="Empezar denuevo">
+                <div id="error" class="alert alert-danger" role="alert"></div>
             </form>
-        </article>
-
         </div>
+    </div>
+    <!--Fin Main Pagina-->
 
-        <!--Fin Main Pagina-->
+    <!--Footer Pagina-->
 
-        <!--Footer Pagina-->
+    <div class="container-fluid ">
+        <footer class="row ">
 
-        <div class="container-fluid ">
-            <footer class="row ">
+            <div class="bg-dark text-white text-center col-12 py-5 ">
 
-                <div class="bg-dark text-white text-center col-12 py-5 ">
-
-                </div>
-            </footer>
-        </div>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
