--- a/inicio sesion.html
+++ b/inicio sesion.html
@@ -41,10 +41,7 @@
     <div class="container">
         <div class="row">
             <form method="post" action="procesar.php" id="formulario">
-                <div class="form-group">
-                    <label for="nombre">Nombre: </label>
-                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingresa tu nombre...">
-                </div>
+
                 <div class="form-group">
                     <label for="email">Correo Electrónico: </label>
                     <input type="email" class="form-control" id="email" name="email" placeholder="Ej.: abcdefg@gmail.com">
@@ -53,28 +50,8 @@
                     <label for="contraseña">Contraseña: </label>
                     <input type="contraseña" class="form-control" id="contraseña" name="contraseña" placeholder="*******">
                 </div>
-                <div class="form-group">
-                    <label for="telefono">Telefono: </label>
-                    <input type="telefono" class="form-control" id="telefono" name="telefono" placeholder="ej.: 987654321 o +56987654321">
-                </div>
-                <div class="form-group">
-                    <label for="comentario">Dejanos un comentario sobre tus intereses: </label>
-                    <input type="comentario" class="form-control" id="comentario" name="comentario" placeholder="Agrega una pequeña descripción...">
-                </div>
-                <div class="form-group">
-                    <label for="interes">Selecciona lo que más te interesa: </label>
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <div class="checkbox">
-                            <label><input type="checkbox" value="orf">Orfebreria</label>
-                        </div>
-                        <div class="checkbox">
-                            <label><input type="checkbox" value="fotos">Photografia</label>
-                        </div>
-                        <div class="checkbox">
-                            <label><input type="checkbox" value="pinturas">pintura</label>
-                        </div>
-                    </div>
-                </div>
+
+
 
                 <input type="submit" class="btn btn-danger" id="enviar" value="Enviar">
                 <input type="reset" class="btn btn-primary" id="limpiar" value="Empezar denuevo">
@@ -84,16 +61,9 @@
     </div>
     <!--Fin Main Pagina-->
 
-    <!--Footer Pagina-->
+    <!--Footer Pagina ????-->
 
-    <div class="container-fluid ">
-        <footer class="row ">
 
-            <div class="bg-dark text-white text-center col-12 py-5 ">
-
-            </div>
-        </footer>
-    </div>
 </body>
 
 </html>
