--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
         <script src="script.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap">
         </script>
+        <div height: 390px width: 39%;>
 
+            <h1>hlas </h1>
+        </div>
     </section>
 
 
