--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
     </section>
 
 
-    <div id="map"></div>
+    <div id="map">
+        <h1>holas</h1>
+
+    </div>
     <script src="script.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap">
     </script>
