--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
 
 
     <div id="map">
-
-        <h1>holas</h1>
-
     </div>
     <script src="script.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap">
     </script>
 
+    <div class="texton">
 
+
+    </div>
 
 
 
