--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap">
     </script>
 
-    <div class="texton">
+    <div align="right" class="texton">
         <h1>holas</h1>
 
     </div>
