--- a/index.html
+++ b/index.html
@@ -119,11 +119,26 @@
 
     <div class="texton">
         <h1>grupo cero cofee</h1>
-
+        <br>
+        <h5 align="right">
+            <p>en estos momentos de pandemia nos encontramos cerrados pero estemos en fase 1 </p>
+        </h5>
+        <br>
+        <br>
+        <h5 align="left">
+            <p>podras visitarnos con el aforo correspondiente </p>
+        </h5>
+        <br>
+        <br>
+        <h5 align="left">
+            <p>hablaremos tanto de arte digital como posibles negocios y futuras subastas que se realizaran en el mismo cafe</p>
+        </h5>
+        <br>
+        <br>
+        <h5 align="left">
+            <p>te esperamos </p>
+        </h5>
     </div>
-
-
-
 
 
     <!-- dejamos el footer abajo-->
@@ -139,7 +154,5 @@
     </div>
 
 </body>
-
-
 
 </html>
