--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </h5>
         <br>
         <br>
-        <h5 align="left">
+        <h5 align="right">
             <p>hablaremos tanto de arte digital como posibles negocios y futuras subastas que se realizaran en el mismo cafe</p>
         </h5>
         <br>
