--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             <p>podras visitarnos con el aforo correspondiente </p>
             <p>hablaremos tanto de arte digital como posibles negocios y futuras subastas que se realizaran en el mismo cafe</p>
             <p>te esperamos </p>
+            <p>Av. Libertad 1348, 1, Viña del Mar</p>
         </h5>
     </div>
 
