--- a/inicio sesion.html
+++ b/inicio sesion.html
@@ -59,8 +59,18 @@
     </div>
     <!--Fin Main Pagina-->
 
-    <!--Footer Pagina ????-->
 
+    <!-- dejamos el footer -->
+    <div class="footer-basic">
+        <footer>
+            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">Home</a></li>
+                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+            </ul>
+            <p class="copyright">Cooperativa Artistica © 2021</p>
+        </footer>
+    </div>
 
 </body>
 
