--- a/exposiciones.html
+++ b/exposiciones.html
@@ -54,7 +54,8 @@
     </header>
 
 
-    <section class="carrusel" height: 60%>
+    <section>
+
         <div id="demo" class="carousel slide" data-ride="carousel">
 
             <div class=container>
