--- a/exposiciones.html
+++ b/exposiciones.html
@@ -55,7 +55,8 @@
 
     <div>
 
-        <h1 style="color: yellow;">noticias noticias ¡</h1>
+        <h1 style="color: black;">noticias noticias ¡</h1>
+
     </div>
 
 
