--- a/exposiciones.html
+++ b/exposiciones.html
@@ -10,16 +10,17 @@
 <head>
 
     <meta charset="UTF-8">
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>exposiciones</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&display=swap" rel="stylesheet">
+
+    <!--de aqui para abajo va las referencias para la api -->
+
+
 
 </head>
 
@@ -53,7 +54,6 @@
 
     </header>
 
-
     <section>
         <div class="exp">
             <h1 style="color: blue;">
@@ -69,6 +69,44 @@
     </section>
 
 
+    <div class="container contenido-principal">
+        <div class="row justify-content-center">
+            <form class="col-10 col-md-8" id="formulario">
+                <div class="formulario-cotizar row">
+                    <div class="form-group col-12 col-md-4">
+                        <select id="moneda" class="form-control">
+                  <option value="" disabled selected>Elige tu Moneda </option>
+                  <option value="USD">Dolar Estadounidense</option>
+                  <option value="MXN">Peso Mexicano</option>
+                  <option value="GBP">Libras</option>
+                  <option value="EUR">Euros</option>
+                </select>
+                    </div>
+                    <div class="form-group col-12 col-md-4">
+                        <select id="criptomoneda" class="form-control">
+                  <option value="" disabled selected>Elige Criptomoneda</option>
+                </select>
+                    </div>
+                    <div class="form-group col-12 col-md-4">
+                        <input type="submit" class="btn btn-success" value="Cotizar" />
+                    </div>
+                </div>
+                <!--.formulario-cotizar-->
+
+                <div class="panel-resultados row justify-content-center mt-5">
+                    <div class="contenido-spinner">
+                        <div class="spinner">
+                            <div class="cube1"></div>
+                            <div class="cube2"></div>
+                        </div>
+                    </div>
+                    <div class="mensajes col-12"></div>
+                    <div id="resultado" class="col-12"></div>
+                </div>
+                <!--panel-resultados-->
+            </form>
+        </div>
+    </div>
 
     <br>
     <br>
@@ -117,5 +155,10 @@
     </div>
 
 </body>
+
+<!--referenciamos la api -->
+<script src="js/api.js"></script>
+<script src="js/ui.js"></script>
+<script src="js/app.js"></script>
 
 </html>
