--- a/exposiciones.html
+++ b/exposiciones.html
@@ -69,7 +69,7 @@
     </section>
 
 
-    <div class="container contenido-principal">
+    <div class="exp2">
         <div class="row justify-content-center">
             <form class="col-10 col-md-8" id="formulario">
                 <div class="formulario-cotizar row">
