--- a/exposiciones.html
+++ b/exposiciones.html
@@ -72,6 +72,7 @@
     <div class="exp2">
         <div class="row justify-content-center">
             <form class="col-10 col-md-8" id="formulario">
+
                 <div class="formulario-cotizar row">
                     <div class="form-group col-12 col-md-4">
                         <select id="moneda" class="form-control">
@@ -85,7 +86,65 @@
                     <div class="form-group col-12 col-md-4">
                         <select id="criptomoneda" class="form-control">
                   <option value="" disabled selected>Elige Criptomoneda</option>
-                </select>
+                  <select id="criptomoneda" class="form-control">
+                    <option value="" disabled="" selected="">Elige Criptomoneda</option>
+                  <option value="42">42 Coin</option>
+                  <option value="300">300 token</option>
+                  <option value="365">365Coin</option>
+                  <option value="404">404Coin</option>
+                  <option value="433">433 Token</option>
+                  <option value="611">SixEleven</option>
+                  <option value="888">Octocoin</option>
+                  <option value="1337">EliteCoin</option>
+                  <option value="BTCD">BitcoinDark</option>
+                  <option value="CRAIG">CraigsCoin</option>
+                  <option value="XBS">Bitstake</option>
+                  <option value="XPY">PayCoin</option>
+                  <option value="GEO">GeoCoin</option>
+                  <option value="CHASH">CleverHash</option>
+                  <option value="NXTI">NXTI</option>
+                  <option value="WOLF">Insanity Coin</option>
+                  <option value="XDP">DogeParty</option>
+                  <option value="AC">Asia Coin</option>
+                  <option value="ACOIN">ACoin</option>
+                  <option value="AERO">Aero Coin</option>
+                  <option value="ALF">AlphaCoin</option>
+                  <option value="AEGIS">Aegis</option>
+                  <option value="AMC">AmericanCoin</option>
+                  <option value="ALIEN">AlienCoin</option>
+                  <option value="APEX">ApexCoin</option>
+                  <option value="ARCH">ArchCoin</option>
+                  <option value="ARG">Argentum</option>
+                  <option value="ARI">AriCoin</option>
+                  <option value="AXR">AXRON</<option>
+                  <option value="BEAN">BeanCash</option>
+                  <option value="BLU">BlueCoin</option>
+                  <option value="BOST">BoostCoin</option>
+                  <option value="BQC">BQCoin</option>
+                  <option value="LIMX">LimeCoinX</option>
+                  <option value="BTB">BitBar</option>
+                  <option value="CAIX">CAIx</option>
+                  <option value="BTMK">BitMark</option>
+                  <option value="BUK">CryptoBuk</option>
+                      <option value="CBX">CryptoBullion</option>
+                      <option value="CCN">CannaCoin</option>
+                      <option value="CIN">CinderCoin</option>
+                      <option value="CINNI">CINNICOIN</option>
+                      <option value="CXC">CheckCoin</option>
+                      <option value="CLAM">CLAMS</option>
+                      <option value="CLR">CopperLark</option>
+                      <option value="CMC">CosmosCoin</option>
+                    <option value="EDGE">EdgeCoin</option>
+                    <option value="BITL">BitLux</option
+                        ><option value="FUTC">FutCoin</option>
+                        <option value="GLOBE">Global</option>
+                        <option value="TAM">TamaGucci</option>
+                        <option value="MRP">MorpheusCoin</option>
+                        <option value="CREVA">Creva Coin</option>
+                        <option value="NANAS">BananaBits</option>
+                        <option value="XCE">Cerium</option>
+
+                        </select>
                     </div>
                     <div class="form-group col-12 col-md-4">
                         <input type="submit" class="btn btn-success" value="Cotizar" />
