--- a/exposiciones.html
+++ b/exposiciones.html
@@ -174,52 +174,53 @@
                     </div>
                 </div>
 
+            </form>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
 
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+        <section class="rowcafeteria">
 
-                <section class="rowcafeteria">
+            <br>
+            <div class="colxs12colmd6">
+                <img src="img/joker.jpg" width="35%" height="10%" alt="galeria" />
+                <img src="img/contemporaneo.jpg" width="17%" height="30%" alt="galeria" />
+                <img src="img/contemporaneo2.jpg" width="20%" height="28%" alt="galeria" />
+                <img src="img/chileno.jpg" width="20%" height="25%" alt="galeria" />
+            </div>
 
-                    <br>
-                    <div class="colxs12colmd6">
-                        <img src="img/joker.jpg" width="35%" height="10%" alt="galeria" />
-                        <img src="img/contemporaneo.jpg" width="17%" height="30%" alt="galeria" />
-                        <img src="img/contemporaneo2.jpg" width="20%" height="28%" alt="galeria" />
-                        <img src="img/chileno.jpg" width="20%" height="25%" alt="galeria" />
-                    </div>
+            <div>
+                <img src="img/persona1.jpg" width="20%" height="25%" alt="galeria" />
+                <img src="img/artplastico.jpg" width="17%" height="30%" alt="galeria" />
+                <img src="img/inedita.jpg" width="20%" height="28%" alt="galeria" />
+                <img src="img/paisaje.jpg" width="20%" height="25%" alt="galeria" />
+            </div>
 
-                    <div>
-                        <img src="img/persona1.jpg" width="20%" height="25%" alt="galeria" />
-                        <img src="img/artplastico.jpg" width="17%" height="30%" alt="galeria" />
-                        <img src="img/inedita.jpg" width="20%" height="28%" alt="galeria" />
-                        <img src="img/paisaje.jpg" width="20%" height="25%" alt="galeria" />
-                    </div>
-
-                </section>
+        </section>
 
 
 
-                <!-- dejamos el footer abajo-->
-                <div class="footer-basic">
-                    <footer>
-                        <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-                        <ul class="list-inline">
-                            <li class="list-inline-item"><a href="#">Home</a></li>
-                            <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-                        </ul>
-                        <p class="copyright">Cooperativa Artistica © 2021</p>
-                    </footer>
-                </div>
+        <!-- dejamos el footer abajo-->
+        <div class="footer-basic">
+            <footer>
+                <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="#">Home</a></li>
+                    <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+                </ul>
+                <p class="copyright">Cooperativa Artistica © 2021</p>
+            </footer>
+        </div>
 
 </body>
 
